--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SpotiPlus</string>
+    <string name="title_home">Home</string>
+    <string name="search">search</string>
+    <string name="more">more</string>
 </resources>
